# opencv-detect-text

./: CMakeLists.txt  main.cpp  temp
